# rerecast

./: .gitignore  Cargo.toml  readme.md  rustc-ice-2025-07-25T01_45_32-193614.txt
.github/workflows/: ci.yml
crates/avian_navmesh/: Cargo.toml
crates/avian_navmesh/src/: collider_to_trimesh.rs  editor_integration.rs  lib.rs  trimesh.rs
crates/avian_navmesh/src/editor_integration/: input_data.rs
crates/avian_rerecast/: Cargo.toml
crates/avian_rerecast/src/: collider_to_trimesh.rs  editor_integration.rs  lib.rs
crates/bevy_rerecast/: Cargo.toml
crates/bevy_rerecast/src/: editor_integration.rs  lib.rs  mesh.rs
crates/bevy_rerecast_core/: Cargo.toml
crates/bevy_rerecast_core/src/: backend.rs  debug.rs  generator.rs  lib.rs  mesh.rs
crates/bevy_rerecast_editor/: Cargo.toml
crates/bevy_rerecast_editor/src/: backend.rs  build.rs  get_navmesh_input.rs  main.rs  ui.rs  visualization.rs
crates/bevy_rerecast_editor/src/camera/: camera_controller.rs
crates/bevy_rerecast_editor/src/theme/: palette.rs  widget.rs
crates/bevy_rerecast_editor_integration/: Cargo.toml
crates/bevy_rerecast_editor_integration/src/: brp.rs  lib.rs
crates/bevy_rerecast_editor_integration/src/transmission/: mod.rs  serialization.rs  serialized_image.rs  serialized_mesh.rs  serialized_standard_material.rs
crates/bevy_rerecast_transmission/: Cargo.toml
crates/bevy_rerecast_transmission/src/: lib.rs  serialization.rs  serialized_mesh.rs  serialized_standard_material.rs  serialized_types.rs
crates/editor/: Cargo.toml
crates/editor/src/: build.rs  camera.rs  get_navmesh_input.rs  main.rs  ui.rs
crates/editor/src/camera/: camera_controller.rs  mod.rs
crates/navmesh/: Cargo.toml
crates/navmesh/assets/models/: dungeon.gltf
crates/navmesh/assets/reference_data/: heightfield_initial.json
crates/navmesh/src/: compact_cell.rs  compact_heightfield.rs  compact_span.rs  editor_integration.rs  erosion.rs  heightfield.rs  lib.rs  main_api.rs  math.rs  pre_filter.rs  rasterize.rs  rasterize_collider.rs  region.rs  span.rs  trimesh.rs  watershed.rs
crates/navmesh/src/editor_integration/: input_data.rs  mod.rs  serialization.rs
crates/navmesh/tests/: cpp_comparison.rs
crates/navmesh/tests/reference_data/: compact_heightfield_distance_field.json  compact_heightfield_initial.json  geometry.json
crates/recast/: Cargo.toml
crates/recast/src/: compact_cell.rs  compact_heightfield.rs  compact_span.rs  contours.rs  detail_mesh.rs  erosion.rs  heightfield.rs  lib.rs  mark_convex_poly_area.rs  math.rs  poly_mesh.rs  pre_filter.rs  rasterize.rs  region.rs  span.rs  trimesh.rs  watershed_build_regions.rs  watershed_distance_field.rs
crates/recast/tests/: cpp_comparison.rs
crates/recast/tests/reference_data/: compact_heightfield_regions.json
crates/rerecast/: Cargo.toml
crates/rerecast/src/: compact_cell.rs  compact_heightfield.rs  compact_span.rs  config.rs  contours.rs  detail_mesh.rs  heightfield.rs  lib.rs  main_api.rs  mark_convex_poly_area.rs  math.rs  poly_mesh.rs  rasterize.rs  region.rs  span.rs  trimesh.rs
crates/rerecast/tests/: cpp_comparison.rs
crates/rerecast/tests/reference_data/: contour_set.json  convex_volumes.json  poly_mesh_detail.json
crates/rerecast/tests/reference_data/chainboom/: config.json  contour_set.json  geometry.json  model.mtl  poly_mesh.json  poly_mesh_detail.json
crates/rerecast/tests/reference_data/dungeon/: config.json  poly_mesh.json
crates/test_scene/: Cargo.toml
crates/test_scene/src/: main.rs
crates/transmission/: Cargo.toml
crates/transmission/src/: serialization.rs  serialized_types.rs
scenes/gltf/: Cargo.toml
scenes/gltf/src/: main.rs
scenes/shapes/: Cargo.toml
scenes/shapes/src/: main.rs
scenes/trenchbroom/: Cargo.toml
scenes/trenchbroom/assets/maps/: scene.map
scenes/trenchbroom/src/: main.rs
src/: column.rs  heightfield.rs  lib.rs  main.rs  span.rs
