[package]
name = "bevy_navmesh"
version = "0.1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2024"
exclude = ["./assets/"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/bevy_navmesh"
description = "TODO"
keywords = ["bevy", "recast", "navmesh", "navigation", "ai"]
categories = ["game-development"]
readme = "readme.md"

[dependencies]
avian3d = "0.3.1"

[dependencies.bevy]
version = "0.16.0"
default-features = false
features = ["bevy_scene"]

[dev-dependencies.bevy]
version = "0.16.0"


[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

[patch.crates-io]
avian3d = { git = "https://github.com/Jondolf/avian", rev = "4f31166ee5e0cc1116756952d754386333b75cb0" }
