[workspace]
members = ["crates/*", "scenes/*"]
resolver = "3"
exclude = ["./assets/"]

[workspace.package]
version = "0.0.1"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/bevy_rerecast"
keywords = ["bevy", "recast", "navmesh", "navigation", "ai"]
categories = ["game-development"]
readme = "../../readme.md"

[workspace.package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
avian3d = "0.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
slotmap = "1.0.7"
# In sync with Bevy
thiserror = "2.0.12"
ureq = "3.0.12"
bevy = { version = "0.16.0", default-features = false }
bevy_math = "0.16.0"
glam = "0.29.3"
# In sync with Bevy
wgpu-types = "24"
# In sync with Bevy
base64 = "0.22.0"
bincode = { version = "2", features = ["serde"] }
anyhow = "1.0.98"
bevy_trenchbroom = { version = "0.8.1", features = ["avian"] }
bitflags = "2.9.1"
approx = "0.5"
tracing = "0.1.41"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

[patch.crates-io]
#avian3d = { git = "https://github.com/Jondolf/avian", rev = "4f31166ee5e0cc1116756952d754386333b75cb0" }
