[package]
name = "avian_navmesh"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
avian3d = { workspace = true }
recast = { version = "0.1", path = "../recast", features = ["bevy"] }

# Editor integration
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
wgpu-types = { workspace = true, features = ["serde"], optional = true }

[dev-dependencies]
bevy_math = { workspace = true, features = ["approx"] }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["editor_integration"]
serialize = ["dep:serde", "avian3d/serialize", "recast/serialize"]
editor_integration = [
    "serialize",
    "dep:serde_json",
    "dep:wgpu-types",
    "dep:bincode",
    "dep:base64",
    "bevy/bevy_remote",
]

[lints]
workspace = true
