[package]
name = "avian_navmesh"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
avian3d = { workspace = true }
rerecast = { version = "0.0.1", path = "../rerecast", features = ["bevy"] }

# Editor integration
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
avian_navmesh_editor_transmission = { version = "0.0.1", path = "../transmission", optional = true }

[features]
default = ["editor_integration"]
serialize = ["dep:serde", "avian3d/serialize", "rerecast/serialize"]
editor_integration = [
    "serialize",
    "dep:serde_json",
    "dep:avian_navmesh_editor_transmission",
    "bevy/bevy_remote",
]

[lints]
workspace = true
