[package]
name = "avian_rerecast"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rerecast = { version = "0.0.1", path = "../rerecast" }

# Editor integration
bevy_rerecast = { version = "0.0.1", path = "../bevy_rerecast" }
bevy_rerecast_transmission = { version = "0.0.1", path = "../bevy_rerecast_transmission" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
