[package]
name = "bevy_rerecast"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_app = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
rerecast = { version = "0.0.2", path = "../rerecast", features = [
    "bevy_reflect",
] }

# from_mesh
bevy_mesh = { workspace = true, optional = true }
bevy_render = { workspace = true, optional = true }

# Editor integration
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bevy_remote = { workspace = true, optional = true }
bevy_asset = { workspace = true, optional = true }
bevy_derive = { workspace = true, optional = true }
bevy_transform = { workspace = true, optional = true }
bevy_pbr = { workspace = true, optional = true }
bevy_platform = { workspace = true, optional = true }
bevy_image = { workspace = true, optional = true }
bevy_rerecast_transmission = { version = "0.0.2", path = "../bevy_rerecast_transmission", optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["bevy_mesh", "editor_integration"]
editor_integration = [
    "serialize",
    "from_mesh",
    "dep:bevy_transform",
    "dep:bevy_remote",
    "dep:bevy_derive",
    "dep:serde_json",
    "dep:tracing",
    "dep:bevy_rerecast_transmission",
    "dep:bevy_asset",
    "dep:bevy_pbr",
    "dep:bevy_platform",
    "dep:bevy_image",
]
serialize = ["dep:serde", "rerecast/serialize", "bevy_transform?/serialize"]
bevy_mesh = ["dep:bevy_mesh", "dep:bevy_render"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
