[package]
name = "bevy_rerecast"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_rerecast_core = { version = "0.0.2", path = "../bevy_rerecast_core" }
bevy_rerecast_editor_integration = { version = "0.0.2", path = "../bevy_rerecast_editor_integration", optional = true }

[features]
default = ["bevy_mesh", "editor_integration"]
editor_integration = ["dep:bevy_rerecast_editor_integration"]
bevy_mesh = ["bevy_rerecast_core/bevy_mesh"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
