[package]
name = "bevy_rerecast_editor"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true, default-features = true, features = [
    "bevy_remote",
    "configurable_error_handler",
] }
bevy_rerecast = { version = "0.0.1", path = "../bevy_rerecast", features = [
    "editor_integration",
    "serialize",
] }
bevy_rerecast_transmission = { version = "0.0.1", path = "../bevy_rerecast_transmission" }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
ureq = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
bevy_ui_text_input = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
