[package]
name = "bevy_rerecast_transmission"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_log",
] }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Editor integration
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
wgpu-types = { workspace = true, features = ["serde"] }

[lints]
workspace = true
