[package]
name = "bevy_rerecast_transmission"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[features]
default = []
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_specular_textures = ["bevy_pbr/pbr_specular_textures"]
pbr_multi_layer_material_textures = [
    "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]

[dependencies]
bevy_render = { workspace = true }
bevy_pbr = { workspace = true }
bevy_asset = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_derive = { workspace = true }
bevy_math = { workspace = true }
bevy_color = { workspace = true }
bevy_image = { workspace = true, features = ["serialize"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Editor integration
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
wgpu-types = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
