[package]
name = "avian_navmesh_editor"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true, default-features = true, features = [
    "bevy_remote",
    "configurable_error_handler",
] }
avian_navmesh = { version = "0.1.0", path = "../avian_navmesh", features = [
    "editor_integration",
    "serialize",
] }
avian3d = { workspace = true, features = ["serialize"] }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
ureq = { workspace = true, features = ["json"] }
thiserror = { workspace = true }

[lints]
workspace = true
