[package]
name = "avian_navmesh"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
slotmap = { workspace = true }
thiserror = { workspace = true }

[features]
editor_integration = ["dep:serde_json"]
default = ["editor_integration"]
serialize = ["dep:serde"]
