[package]
name = "recast"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bevy_math = { workspace = true }

# Bevy integration
bevy = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
bevy_math = { workspace = true, features = ["approx"] }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
serialize = ["dep:serde"]
bevy = ["dep:bevy"]

[lints]
workspace = true
