[package]
name = "rerecast"
description = "Rust port of recastnavigation"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
bitflags = { workspace = true }
tracing = { workspace = true }

# Bevy integration
bevy = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
serialize = ["dep:serde", "glam/serde", "slotmap/serde"]
bevy = ["dep:bevy"]

[lints]
workspace = true

[package.metadata]
all-features = true
