[package]
name = "trenchbroom_scene"
description = "TODO"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true, default-features = true, features = ["bevy_remote"] }
serde = { workspace = true }
avian3d = { workspace = true }
bevy_rerecast = { path = "../../crates/bevy_rerecast" }
bevy_trenchbroom = { workspace = true }

[lints]
workspace = true
